# mat2025

./: .gitignore  EEInfo.mlx  NOTS.txt  Saturday20250830.txt  preStatus20260111.mlx  startup.m
AFSIM/: AFSIM Notes.mlx  AFSIM_Notes1.mlx
adsb/: adsbCharSet.m  adsbTest.m
app/: fftTest.mlapp  fftTest_exported.m  launcher.mlapp  launcher_exported.m
blue/: Klingenfuss2Blue.mlx  SDR2BlueNew.mlx  SDRSharpNameTo1950.m  basebandConvrt.mlx  blueWrite.mlx  readBlue.mlx  readBlueFileHeader.m  sdr2blue.mlx  writeBlueFileHeader.m
doc/: EngineeringNotes.docx  EngineeringNotes2025.docx  EngineeringNotes2025.mlx
dsp/: audioBufferClass.m  cwSignalClass.m  lfmSweepClass.m
earth/: demoSeasons.mlx  demoSolarSystem.mlx
frosty/: Notes.mlx
hdf5/: HDF5.mlx  HDF5_HF.mlx  creatStuff.m  h5Explore.m  hd5Test.m  test00.m
heliocentric/: CONVERT.m  EARTH.m  MOON.m  SUN.m  UNIVERSE.m  demoEarthRotation.mlx  jd2PhiGrn.m
iono/: appendixF.m  quadSpline.m  qvif2vif.m  qvih2vih.m  range2Path.m  smithFactor.m  vif2oif.m
mex/: how2Mex.mlx  mexVMul.c
misc/: compacitor.mlx  inductor.mlx
res/: liveTasks.json  type1000.tmp
roth/: FrameDiagram.pptx  ROTH.m  airTrack.mlx  airTrackSimTable.csv  beamformer.mlx  compileROTH_Mex.mlx  gameAnalysis.mlx  geo2ecf_test.mlx  inverseBeamFormer.mlx  michiganVsOhio.mlx  radarEquation.mlx  rothMex.c  testRange.m  testSignal.mlx
sgp/: SGP.m  compareThem.m  demoSGP.mlx  tle20250918.mat
utl/: GIT_Stuff.mlapp  export2PDF.mlx  gitPull.m  gitPush.m  readJson.m  struct2hdf5.m
vallado/: ecef2ll.m  (+1 more)
zExperiment/mapping-1.4.3/src/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  deg2rad.m.in  gdalread.cc  misc.cpp  misc.h  rad2deg.m.in
(+952 files in other folders)
